[gd_scene load_steps=3 format=3 uid="uid://2878ebeahf7g"]

[ext_resource type="Script" path="res://addons/chicken_scratch/graph/OfferingElement.gd" id="1_ry0pt"]
[ext_resource type="Texture2D" uid="uid://d28uo12v6av0s" path="res://addons/chicken_scratch/icons/trash.svg" id="2_bluii"]

[node name="Offer" type="VBoxContainer" node_paths=PackedStringArray("ItemName", "ItemType", "Quantity")]
offset_right = 155.0
offset_bottom = 101.0
script = ExtResource("1_ry0pt")
ItemName = NodePath("VBoxContainer/ItemName")
ItemType = NodePath("VBoxContainer/ItemType")
Quantity = NodePath("HBoxContainer/Quanitity")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Delete" type="Button" parent="HBoxContainer"]
texture_filter = 1
layout_mode = 2
icon = ExtResource("2_bluii")

[node name="VSeparator" type="VSeparator" parent="HBoxContainer"]
layout_mode = 2

[node name="QuantityLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Quantity"

[node name="Quanitity" type="SpinBox" parent="HBoxContainer"]
layout_mode = 2
min_value = 1.0
value = 1.0
rounded = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="ItemName" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "<item_name>"

[node name="ItemType" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
placeholder_text = "<item_type>"

[node name="HSeparator" type="HSeparator" parent="."]
layout_mode = 2

[connection signal="pressed" from="HBoxContainer/Delete" to="." method="_on_delete_pressed"]
